namespace BaseNS
{
    public enum Direction
    {
        Up,
        Down,
        Left,
        Right
    }
}